// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. key facts with title 1`] = `
<style>
{
  "IS1": {
    "fontFamily": "GillSansMTStd-Medium",
    "fontSize": 12,
    "fontWeight": "400",
    "letterSpacing": 1.2,
    "marginBottom": 20,
  },
  "IS10": {
    "flexDirection": "row",
    "marginBottom": 20,
    "paddingLeft": 1,
    "width": "100%",
  },
  "IS11": {
    "marginLeft": 10,
    "marginRight": 10,
  },
  "IS2": {
    "backgroundColor": "#103546",
    "height": 8,
    "top": 1,
    "transform": Array [
      {
        "rotate": "45deg",
      },
    ],
    "width": 8,
  },
  "IS3": {
    "color": "#333333",
    "fontFamily": "TimesDigitalW04",
    "fontSize": 16,
    "lineHeight": 30,
    "marginTop": -8,
    "paddingLeft": 15,
    "width": "95%",
  },
  "IS4": {
    "flexDirection": "row",
    "marginBottom": 20,
    "paddingLeft": 1,
    "width": "100%",
  },
  "IS5": {
    "backgroundColor": "#103546",
    "height": 8,
    "top": 1,
    "transform": Array [
      {
        "rotate": "45deg",
      },
    ],
    "width": 8,
  },
  "IS6": {
    "color": "#333333",
    "fontFamily": "TimesDigitalW04",
    "fontSize": 16,
    "lineHeight": 30,
    "marginTop": -8,
    "paddingLeft": 15,
    "width": "95%",
  },
  "IS7": {
    "flexDirection": "row",
    "marginBottom": 20,
    "paddingLeft": 1,
    "width": "100%",
  },
  "IS8": {
    "backgroundColor": "#103546",
    "height": 8,
    "top": 1,
    "transform": Array [
      {
        "rotate": "45deg",
      },
    ],
    "width": 8,
  },
  "IS9": {
    "color": "#333333",
    "fontFamily": "TimesDigitalW04",
    "fontSize": 16,
    "lineHeight": 30,
    "marginTop": -8,
    "paddingLeft": 15,
    "width": "95%",
  },
}
</style>

<View>
  <Text>
    N E W   B R E X I T   R E F E R E N D U M
  </Text>
  <View>
    <View>
      <View />
      <Text>
        <Text>
          List item 1
        </Text>
      </Text>
    </View>
    <View>
      <View />
      <Text>
        <Text>
          List item 2
        </Text>
      </Text>
    </View>
    <View>
      <View />
      <Text>
        <Text>
          List item 3a
        </Text>
        <Text>
           List item 3b
        </Text>
      </Text>
    </View>
  </View>
</View>
`;

exports[`2. key facts without title 1`] = `
<style>
{
  "IS1": {
    "backgroundColor": "#103546",
    "height": 8,
    "top": 1,
    "transform": Array [
      {
        "rotate": "45deg",
      },
    ],
    "width": 8,
  },
  "IS10": {
    "marginLeft": 10,
    "marginRight": 10,
  },
  "IS2": {
    "color": "#333333",
    "fontFamily": "TimesDigitalW04",
    "fontSize": 16,
    "lineHeight": 30,
    "marginTop": -8,
    "paddingLeft": 15,
    "width": "95%",
  },
  "IS3": {
    "flexDirection": "row",
    "marginBottom": 20,
    "paddingLeft": 1,
    "width": "100%",
  },
  "IS4": {
    "backgroundColor": "#103546",
    "height": 8,
    "top": 1,
    "transform": Array [
      {
        "rotate": "45deg",
      },
    ],
    "width": 8,
  },
  "IS5": {
    "color": "#333333",
    "fontFamily": "TimesDigitalW04",
    "fontSize": 16,
    "lineHeight": 30,
    "marginTop": -8,
    "paddingLeft": 15,
    "width": "95%",
  },
  "IS6": {
    "flexDirection": "row",
    "marginBottom": 20,
    "paddingLeft": 1,
    "width": "100%",
  },
  "IS7": {
    "backgroundColor": "#103546",
    "height": 8,
    "top": 1,
    "transform": Array [
      {
        "rotate": "45deg",
      },
    ],
    "width": 8,
  },
  "IS8": {
    "color": "#333333",
    "fontFamily": "TimesDigitalW04",
    "fontSize": 16,
    "lineHeight": 30,
    "marginTop": -8,
    "paddingLeft": 15,
    "width": "95%",
  },
  "IS9": {
    "flexDirection": "row",
    "marginBottom": 20,
    "paddingLeft": 1,
    "width": "100%",
  },
}
</style>

<View>
  <View>
    <View>
      <View />
      <Text>
        <Text>
          List item 1
        </Text>
      </Text>
    </View>
    <View>
      <View />
      <Text>
        <Text>
          List item 2
        </Text>
      </Text>
    </View>
    <View>
      <View />
      <Text>
        <Text>
          List item 3a
        </Text>
        <Text>
           List item 3b
        </Text>
      </Text>
    </View>
  </View>
</View>
`;
